main/asterisk: Fix startup sequence for realtime features

When ASTERISK-23265/ASTERISK-23320 was fixed, it inadvertently led to realtime
features breaking. This was due to features loading prior to realtime. This
patch fixes this by loading features after loading dynamic modules.

ASTERISK-23487 #close
Reported by: Denis
Tested by: Denis


git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/12@412698 65c4cc65-6c06-0410-ace0-fbb531ad65f3